Move skip_measurements into params and add cellpose params

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,15 +28,22 @@ params {
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
     gradle_cache_dir             = '/vast/scratch/users/$USER/.gradle'
 
-    // Segmentation options
+    // measurement options
+    skip_measurements            = false
     pixel_size_microns           = 0.28
 
     // sopa segmentation options
     technology                 = "ome_tif"
     patch_width_pixel          = 3000
     patch_overlap_pixel        = 40
-    cellpose_diameter          = 35
-    cellpose_min_area          = 2000
+
+    // cellpose options
+    cellpose_diameter           = 30
+    cellpose_min_area           = 0
+    cellpose_flow_threshold     = null
+    cellpose_cellprob_threshold = null
+    cellpose_model_type         = null
+    cellpose_pretrained_model   = null
 
     // Config options
     config_profile_name        = null
