Handle optional cellpose params

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,6 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                        = null
 
@@ -28,10 +27,6 @@ params {
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
     gradle_cache_dir             = '/vast/scratch/users/$USER/.gradle'
 
-    // measurement options
-    skip_measurements            = false
-    pixel_size_microns           = 0.28
-
     // sopa segmentation options
     technology                 = "ome_tif"
     patch_width_pixel          = 3000
@@ -44,6 +39,10 @@ params {
     cellpose_cellprob_threshold = null
     cellpose_model_type         = null
     cellpose_pretrained_model   = null
+
+    // measurement options
+    skip_measurements            = false
+    pixel_size_microns           = 0.28
 
     // Config options
     config_profile_name        = null
@@ -214,6 +213,16 @@ process {
             } else {
                 return ''
             }
+        }
+    }
+    withName: 'SOPA_SEGMENTATIONCELLPOSE' {
+        ext.args = {
+            [
+                params.cellpose_flow_threshold != null ? "--flow-threshold ${params.cellpose_flow_threshold}" : null,
+                params.cellpose_cellprob_threshold != null ? "--cellprob-threshold ${params.cellpose_cellprob_threshold}" : null,
+                params.cellpose_model_type != null ? "--model-type ${params.cellpose_model_type}" : null,
+                params.cellpose_pretrained_model != null ? "--model-type ${params.cellpose_pretrained_model}" : null,
+            ].findAll { it != null }.join(' ')
         }
     }
 }
