Move mesmer samplesheet args to params

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,6 +40,17 @@ params {
     cellpose_model_type         = null
     cellpose_pretrained_model   = null
 
+    // mesmer options
+    mesmer_combine_method       = null
+    mesmer_segmentation_level   = null
+    mesmer_maxima_threshold     = null
+    mesmer_interior_threshold   = null
+    mesmer_maxima_smooth        = null
+    mesmer_min_nuclei_area      = null
+    mesmer_remove_border_cells  = true
+    mesmer_pixel_expansion      = null
+    mesmer_padding              = null
+
     // measurement options
     skip_measurements            = false
     pixel_size_microns           = 0.28
@@ -204,7 +215,7 @@ process.shell = [
 
 process {
     withName: 'CELLMEASUREMENT' {
-        // Need to bind gradle cache directory for cellmeasurement tool to work
+        // Need to bind gradle cache directory to somewhere writable for cellmeasurement tool to work
         containerOptions = {
             if (workflow.containerEngine == 'apptainer' || workflow.containerEngine == 'singularity') {
                 return "-B ${params.gradle_cache_dir}:/cellmeasurement/.gradle"
@@ -223,6 +234,22 @@ process {
                 params.cellpose_model_type != null ? "--model-type ${params.cellpose_model_type}" : null,
                 params.cellpose_pretrained_model != null ? "--model-type ${params.cellpose_pretrained_model}" : null,
             ].findAll { it != null }.join(' ')
+        }
+    }
+
+    withName: 'MESMERSEGMENT' {
+        ext.args = {
+            [
+                params.mesmer_combine_method ? "--combine-method ${params.mesmer_combine_method}" : '',
+                params.mesmer_segmentation_level ? "--segmentation-level ${params.mesmer_segmentation_level}" : '',
+                params.mesmer_maxima_threshold ? "--maxima-threshold ${params.mesmer_maxima_threshold}" : '',
+                params.mesmer_interior_threshold ? "--interior-threshold ${params.mesmer_interior_threshold}" : '',
+                params.mesmer_maxima_smooth ? "--maxima-smooth ${params.mesmer_maxima_smooth}" : '',
+                params.mesmer_min_nuclei_area ? "--min-nuclei-area ${params.mesmer_min_nuclei_area}" : '',
+                params.mesmer_remove_border_cells ? '--remove-cells-touching-border' : '--no-remove-cells-touching-border',
+                params.mesmer_pixel_expansion ? "--pixel-expansion ${params.mesmer_pixel_expansion}" : '',
+                params.mesmer_padding ? "--padding ${params.mesmer_padding}" : ''
+            ].findAll { it != '' }.join(' ')
         }
     }
 }
