--- a/conf/test_mesmer.config
+++ b/conf/test_mesmer.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run WEHI-SODA-Hub/spatialproteomics -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run WEHI-SODA-Hub/spatialproteomics -profile test_mesmer,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
@@ -22,6 +22,6 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    input = 'test/samplesheet.csv'
+    input = 'tests/mesmer_samplesheet.csv'
 
 }
