--- a/nextflow.config
+++ b/nextflow.config
@@ -170,8 +170,8 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test_mesmer   { includeConfig 'conf/test_mesmer.config'      }
+    test_cellpose { includeConfig 'conf/test_cellpose.config' }
 }
 
 // Load nf-core custom profiles from different Institutions
