--- a/conf/test_cellpose.config
+++ b/conf/test_cellpose.config
@@ -30,5 +30,5 @@ params {
 }
 
 env {
-    CELLPOSE_LOCAL_MODELS_PATH: '/tmp/cellpose_models'
+    CELLPOSE_LOCAL_MODELS_PATH = '/tmp/cellpose_models'
 }
