Set gradle cache dir for tests

--- a/conf/test_mesmer.config
+++ b/conf/test_mesmer.config
@@ -22,6 +22,7 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    input = 'tests/mesmer_samplesheet.csv'
+    input                      = 'tests/mesmer_samplesheet.csv'
 
+    gradle_cache_dir           = '$HOME/.gradle'
 }
