--- a/conf/test_cellpose.config
+++ b/conf/test_cellpose.config
@@ -24,9 +24,11 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     input = 'tests/cellpose_samplesheet.csv'
+
     patch_width_pixel          = 250
     patch_overlap_pixel        = 20
 
+    gradle_cache_dir           = '$HOME/.gradle'
 }
 
 env {
