Update cellmeasurement param handling and add cell_expansion param

--- a/nextflow.config
+++ b/nextflow.config
@@ -54,6 +54,7 @@ params {
     // measurement options
     skip_measurements            = false
     pixel_size_microns           = 0.28
+    cell_expansion               = 3
 
     // Config options
     config_profile_name        = null
@@ -224,6 +225,13 @@ process {
             } else {
                 return ''
             }
+        }
+        ext.args = {
+            [
+                params.pixel_size_microns ? "--pixel-size-microns=${params.pixel_size_microns}" : null,
+                params.skip_measurements ? '--skip-measurements=true' : '--skip-measurements=false',
+                params.cell_expansion ? "--cell-expansion=${params.cell_expansion}" : null
+            ].findAll { it != null }.join(' ')
         }
     }
     withName: 'SOPA_SEGMENTATIONCELLPOSE' {
