Add default args for cellpose and mesmer

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,28 +28,28 @@ params {
     gradle_cache_dir             = '/vast/scratch/users/$USER/.gradle'
 
     // sopa segmentation options
-    technology                 = "ome_tif"
-    patch_width_pixel          = 3000
-    patch_overlap_pixel        = 40
+    technology                   = 'ome_tif'
+    patch_width_pixel            = 3000
+    patch_overlap_pixel          = 40
 
     // cellpose options
-    cellpose_diameter           = 30
-    cellpose_min_area           = 0
-    cellpose_flow_threshold     = null
-    cellpose_cellprob_threshold = null
-    cellpose_model_type         = null
-    cellpose_pretrained_model   = null
+    cellpose_diameter            = 30
+    cellpose_min_area            = 200
+    cellpose_flow_threshold      = 0.4
+    cellpose_cellprob_threshold  = 0.0
+    cellpose_model_type          = null
+    cellpose_pretrained_model    = null
 
     // mesmer options
-    mesmer_combine_method       = null
-    mesmer_segmentation_level   = null
-    mesmer_maxima_threshold     = null
-    mesmer_interior_threshold   = null
-    mesmer_maxima_smooth        = null
-    mesmer_min_nuclei_area      = null
-    mesmer_remove_border_cells  = true
-    mesmer_pixel_expansion      = null
-    mesmer_padding              = null
+    mesmer_combine_method        = 'prod'
+    mesmer_segmentation_level    = null
+    mesmer_maxima_threshold      = 0.1
+    mesmer_interior_threshold    = 0.3
+    mesmer_maxima_smooth         = 0
+    mesmer_min_nuclei_area       = 15
+    mesmer_remove_border_cells   = true
+    mesmer_pixel_expansion       = 3
+    mesmer_padding               = 0
 
     // measurement options
     skip_measurements            = false
@@ -57,16 +57,16 @@ params {
     cell_expansion               = 3
 
     // Config options
-    config_profile_name        = null
-    config_profile_description = null
+    config_profile_name          = null
+    config_profile_description   = null
 
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
+    custom_config_version        = 'master'
+    custom_config_base           = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact       = null
+    config_profile_url           = null
 
     // Schema validation default options
-    validate_params            = true
+    validate_params              = true
 }
 
 // Load base.config by default for all pipelines
