--- a/conf/test.config
+++ b/conf/test.config
@@ -6,7 +6,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run WEHI-SODA-Hub/spatialproteomics -profile test_cellpose,<docker/singularity> --outdir <OUTDIR>
+        nextflow run WEHI-SODA-Hub/spatialproteomics -profile test,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
