--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,7 @@ params {
     show_hidden                  = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    gradle_cache_dir             = '/vast/scratch/users/$USER/.gradle'
+    gradle_cache_dir             = '$HOME/.gradle'
 
     // sopa segmentation options
     technology                   = 'ome_tif'
@@ -171,8 +171,8 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    test_mesmer   { includeConfig 'conf/test_mesmer.config'      }
-    test_cellpose { includeConfig 'conf/test_cellpose.config' }
+    test          { includeConfig 'conf/test.config'        }
+    test_mesmer   { includeConfig 'conf/test_mesmer.config' }
 }
 
 // Load nf-core custom profiles from different Institutions
