--- a/conf/test.config
+++ b/conf/test.config
@@ -23,7 +23,7 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    input = 'tests/cellpose_samplesheet.csv'
+    input                      = "${projectDir}/tests/cellpose_samplesheet.csv"
 
     patch_width_pixel          = 250
     patch_overlap_pixel        = 20
