Add parameter to allow removal of background channels

--- a/conf/test.config
+++ b/conf/test.config
@@ -24,10 +24,9 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     input                      = "${projectDir}/tests/cellpose_samplesheet.csv"
-
     patch_width_pixel          = 250
     patch_overlap_pixel        = 20
-
+    remove_markers             = 'TRITC'
     gradle_cache_dir           = '$HOME/.gradle'
 }
 
