--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,9 @@ params {
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
     gradle_cache_dir             = '$HOME/.gradle'
 
+    // background subtraction options
+    remove_markers               = 'TRITC,Cy5'
+
     // sopa segmentation options
     technology                   = 'ome_tif'
     patch_width_pixel            = 3000
@@ -215,6 +218,14 @@ process.shell = [
 ]
 
 process {
+    withName: 'EXTRACTMARKERS' {
+        ext.args = {
+            [
+                params.remove_markers ? params.remove_markers.split(',').collect { "--remove-marker ${it}" }.join(' ') : null
+            ].findAll { it != null }.join(' ')
+        }
+    }
+
     withName: 'CELLMEASUREMENT' {
         // Need to bind gradle cache directory to somewhere writable for cellmeasurement tool to work
         containerOptions = {
