Revise process labels and add memory profiles based on image size

--- a/nextflow.config
+++ b/nextflow.config
@@ -176,13 +176,56 @@ profiles {
     }
     test          { includeConfig 'conf/test.config'        }
     test_mesmer   { includeConfig 'conf/test_mesmer.config' }
+
+    // process_single is only used by backsub, so set this to high mem
+    // For images 150GB and below
+    small {
+        process {
+            withLabel: 'process_medium' {
+                memory = '24.GB'
+            }
+            withLabel: 'process_high' {
+                memory = '36.GB'
+            }
+            withLabel: 'process_single' {
+                memory = '36.GB'
+            }
+        }
+    }
+    // For images 300GB and below
+    medium {
+        process {
+            withLabel: 'process_medium' {
+                memory = '48.GB'
+            }
+            withLabel: 'process_high' {
+                memory = '72.GB'
+            }
+            withLabel: 'process_single' {
+                memory = '72.GB'
+            }
+        }
+    }
+    // For images 600GB and below
+    large {
+        process {
+            withLabel: 'process_medium' {
+                memory = '96.GB'
+            }
+            withLabel: 'process_high' {
+                memory = '144.GB'
+            }
+            withLabel: 'process_single' {
+                memory = '144.GB'
+            }
+        }
+    }
 }
 
 // Load nf-core custom profiles from different Institutions
 includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 // Load WEHI-SODA-Hub/spatialproteomics custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
 // includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/spatialproteomics.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
