Add support for multi-threaded cellmeasurement process

--- a/conf/base.config
+++ b/conf/base.config
@@ -46,6 +46,12 @@ process {
         memory = { 24.GB * task.attempt }
         time   = { 24.h  * task.attempt }
     }
+    // process_multi -- multi-theaded processes
+    withLabel:process_multi {
+        cpus   = { 4                    }
+        memory = { 24.GB * task.attempt }
+        time   = { 24.h  * task.attempt }
+    }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
     }
