--- a/nextflow.config
+++ b/nextflow.config
@@ -190,6 +190,10 @@ profiles {
             withLabel: 'process_single' {
                 memory = '36.GB'
             }
+            withLabel: 'process_multi' {
+                cpus   = 8
+                memory = '36.GB'
+            }
         }
     }
     // For images 300GB and below
@@ -202,6 +206,10 @@ profiles {
                 memory = '72.GB'
             }
             withLabel: 'process_single' {
+                memory = '72.GB'
+            }
+            withLabel: 'process_multi' {
+                cpus   = 16
                 memory = '72.GB'
             }
         }
@@ -217,6 +225,10 @@ profiles {
             }
             withLabel: 'process_single' {
                 memory = '144.GB'
+            }
+            withLabel: 'process_multi' {
+                cpus   = 32
+                memory = '72.GB'
             }
         }
     }
