--- a/subworkflows/local/mesmer_segment/meta.yml
+++ b/subworkflows/local/mesmer_segment/meta.yml
@@ -1,44 +1,45 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
-name: "mesmer"
-## TODO nf-core: Add a description of the subworkflow and list keywords
-description: Sort SAM/BAM/CRAM file
+name: "mesmer_segment"
+description: Perform cell segmentation using Mesmer for both nuclear and whole-cell compartments, then extract cell measurements and export as GeoJSON annotations
 keywords:
-  - sort
-  - bam
-  - sam
-  - cram
-## TODO nf-core: Add a list of the modules and/or subworkflows used in the subworkflow
+  - segmentation
+  - mesmer
+  - nuclear
+  - whole-cell
+  - cell
+  - measurement
+  - microscopy
+  - geojson
+  - annotations
 components:
-  - samtools/sort
-  - samtools/index
-## TODO nf-core: List all of the channels used as input with a description and their structure
+  - mesmersegment
+  - cellmeasurement
 input:
-  - ch_bam:
-      type: file
+  - ch_mesmer_segment:
+      type: channel
       description: |
-        The input channel containing the BAM/CRAM/SAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.{bam/cram/sam}"
-## TODO nf-core: List all of the channels used as output with a descriptions and their structure
+        The input channel containing sample metadata and TIFF files with channel information
+        Structure: [ val(sample), val(run_backsub), val(run_mesmer), val(run_cellpose), path(tiff), val(nuclear_channel), val(membrane_channels) ]
+      pattern: "*.{tiff,tif}"
 output:
-  - bam:
+  - annotations:
       type: file
       description: |
-        Channel containing BAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.bam"
-  - bai:
+        Channel containing GeoJSON files with cell measurements and annotations
+        Structure: [ val(meta), path(geojson) ]
+      pattern: "*.geojson"
+  - whole_cell_tif:
       type: file
       description: |
-        Channel containing indexed BAM (BAI) files
-        Structure: [ val(meta), path(bai) ]
-      pattern: "*.bai"
-  - csi:
+        Channel containing whole-cell segmentation mask TIFF files
+        Structure: [ val(meta), path(tiff) ]
+      pattern: "*.tiff"
+  - nuclear_tif:
       type: file
       description: |
-        Channel containing CSI files
-        Structure: [ val(meta), path(csi) ]
-      pattern: "*.csi"
+        Channel containing nuclear segmentation mask TIFF files
+        Structure: [ val(meta), path(tiff) ]
+      pattern: "*.tiff"
   - versions:
       type: file
       description: |
