--- a/subworkflows/local/mesmer_segment_wbacksub/meta.yml
+++ b/subworkflows/local/mesmer_segment_wbacksub/meta.yml
@@ -1,44 +1,48 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "mesmer_segment_wbacksub"
-## TODO nf-core: Add a description of the subworkflow and list keywords
-description: Sort SAM/BAM/CRAM file
+description: Perform complete cell segmentation pipeline with background subtraction followed by Mesmer segmentation for both nuclear and whole-cell compartments, then extract cell measurements as GeoJSON annotations
 keywords:
-  - sort
-  - bam
-  - sam
-  - cram
-## TODO nf-core: Add a list of the modules and/or subworkflows used in the subworkflow
+  - segmentation
+  - mesmer
+  - background
+  - subtraction
+  - nuclear
+  - whole-cell
+  - cell
+  - measurement
+  - microscopy
+  - geojson
+  - annotations
+  - preprocessing
 components:
-  - samtools/sort
-  - samtools/index
-## TODO nf-core: List all of the channels used as input with a description and their structure
+  - backgroundsubtract
+  - mesmer_segment
 input:
-  - ch_bam:
-      type: file
+  - ch_mesmer_wbacksub:
+      type: channel
       description: |
-        The input channel containing the BAM/CRAM/SAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.{bam/cram/sam}"
-## TODO nf-core: List all of the channels used as output with a descriptions and their structure
+        The input channel containing sample metadata and TIFF files with channel information for background subtraction and segmentation
+        Structure: [ val(sample), val(run_backsub), val(run_mesmer), val(run_cellpose), path(tiff), val(nuclear_channel), val(membrane_channels) ]
+      pattern: "*.{tiff,tif}"
 output:
-  - bam:
+  - annotations:
       type: file
       description: |
-        Channel containing BAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.bam"
-  - bai:
+        Channel containing GeoJSON files with cell measurements and annotations
+        Structure: [ val(meta), path(geojson) ]
+      pattern: "*.geojson"
+  - whole_cell_tif:
       type: file
       description: |
-        Channel containing indexed BAM (BAI) files
-        Structure: [ val(meta), path(bai) ]
-      pattern: "*.bai"
-  - csi:
+        Channel containing whole-cell segmentation mask TIFF files
+        Structure: [ val(meta), path(tiff) ]
+      pattern: "*.tiff"
+  - nuclear_tif:
       type: file
       description: |
-        Channel containing CSI files
-        Structure: [ val(meta), path(csi) ]
-      pattern: "*.csi"
+        Channel containing nuclear segmentation mask TIFF files
+        Structure: [ val(meta), path(tiff) ]
+      pattern: "*.tiff"
   - versions:
       type: file
       description: |
