--- a/subworkflows/local/sopa_cellpose/meta.yml
+++ b/subworkflows/local/sopa_cellpose/meta.yml
@@ -1,44 +1,39 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "sopa_cellpose"
-## TODO nf-core: Add a description of the subworkflow and list keywords
-description: Sort SAM/BAM/CRAM file
+description: Perform Cellpose segmentation on image patches using SOPA, then resolve and consolidate the segmentation boundaries from all patches into a unified output
 keywords:
-  - sort
-  - bam
-  - sam
-  - cram
-## TODO nf-core: Add a list of the modules and/or subworkflows used in the subworkflow
+  - segmentation
+  - cellpose
+  - sopa
+  - patches
+  - boundaries
+  - spatial
+  - omics
+  - microscopy
+  - resolve
 components:
-  - samtools/sort
-  - samtools/index
-## TODO nf-core: List all of the channels used as input with a description and their structure
+  - sopa/segmentationcellpose
+  - sopa/resolvecellpose
 input:
-  - ch_bam:
-      type: file
+  - ch_patches:
+      type: channel
       description: |
-        The input channel containing the BAM/CRAM/SAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.{bam/cram/sam}"
-## TODO nf-core: List all of the channels used as output with a descriptions and their structure
+        The input channel containing image patches with metadata for Cellpose segmentation
+        Structure: [ val(meta), path(zarr), val(index), val(n_patches), val(nuclear_channel), val(membrane_channels) ]
+      pattern: "*.zarr"
+  - ch_spatial_data:
+      type: channel
+      description: |
+        The input channel containing spatial data in zarr format
+        Structure: [ val(meta), path(zarr) ]
+      pattern: "*.zarr"
 output:
-  - bam:
+  - boundaries:
       type: file
       description: |
-        Channel containing BAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.bam"
-  - bai:
-      type: file
-      description: |
-        Channel containing indexed BAM (BAI) files
-        Structure: [ val(meta), path(bai) ]
-      pattern: "*.bai"
-  - csi:
-      type: file
-      description: |
-        Channel containing CSI files
-        Structure: [ val(meta), path(csi) ]
-      pattern: "*.csi"
+        Channel containing resolved Cellpose segmentation boundaries in parquet format
+        Structure: [ val(meta), path(parquet) ]
+      pattern: "*.parquet"
   - versions:
       type: file
       description: |
