--- a/subworkflows/local/sopa_segment_compartment/meta.yml
+++ b/subworkflows/local/sopa_segment_compartment/meta.yml
@@ -1,44 +1,45 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "sopa_segment_compartment"
-## TODO nf-core: Add a description of the subworkflow and list keywords
-description: Sort SAM/BAM/CRAM file
+description: Perform compartment segmentation using SOPA with Cellpose, converting TIFF images to zarr format, creating patches, running segmentation, and converting results back to TIFF
 keywords:
-  - sort
-  - bam
-  - sam
-  - cram
-## TODO nf-core: Add a list of the modules and/or subworkflows used in the subworkflow
+  - segmentation
+  - sopa
+  - cellpose
+  - spatial
+  - omics
+  - microscopy
+  - compartment
+  - zarr
+  - patches
 components:
-  - samtools/sort
-  - samtools/index
-## TODO nf-core: List all of the channels used as input with a description and their structure
+  - sopa_cellpose
+  - sopa/convert
+  - sopa/patchifyimage
+  - parquettotiff
 input:
-  - ch_bam:
-      type: file
+  - ch_sopa:
+      type: channel
       description: |
-        The input channel containing the BAM/CRAM/SAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.{bam/cram/sam}"
-## TODO nf-core: List all of the channels used as output with a descriptions and their structure
+        The input channel containing TIFF files with nuclear and membrane channel information
+        Structure: [ val(meta), path(tiff), val(nuclear_channel), val(membrane_channels) ]
+      pattern: "*.{tiff,tif}"
+  - compartment:
+      type: string
+      description: |
+        Compartment type identifier for segmentation (e.g., nuclear, whole_cell)
 output:
-  - bam:
+  - zarr:
       type: file
       description: |
-        Channel containing BAM files
-        Structure: [ val(meta), path(bam) ]
-      pattern: "*.bam"
-  - bai:
+        Channel containing zarr spatial data files
+        Structure: [ val(meta), path(zarr) ]
+      pattern: "*.zarr"
+  - tiff:
       type: file
       description: |
-        Channel containing indexed BAM (BAI) files
-        Structure: [ val(meta), path(bai) ]
-      pattern: "*.bai"
-  - csi:
-      type: file
-      description: |
-        Channel containing CSI files
-        Structure: [ val(meta), path(csi) ]
-      pattern: "*.csi"
+        Channel containing segmented compartment TIFF files
+        Structure: [ val(meta), path(tiff) ]
+      pattern: "*.tiff"
   - versions:
       type: file
       description: |
