Add versions to subworkflows

--- a/subworkflows/local/backgroundsubtract/meta.yml
+++ b/subworkflows/local/backgroundsubtract/meta.yml
@@ -12,7 +12,7 @@ keywords:
   - preprocessing
 components:
   - extractmarkers
-  - nf-core/backsub
+  - backsub
 input:
   - ch_backsub:
       type: channel
