--- a/nextflow.config
+++ b/nextflow.config
@@ -276,7 +276,8 @@ process {
     withName: 'EXTRACTMARKERS' {
         ext.args = {
             [
-                params.remove_markers ? params.remove_markers.split(',').collect { "--remove-marker ${it}" }.join(' ') : null
+                params.containsKey('remove_markers') && params.remove_markers ?
+                    params.remove_markers.split(',').collect { "--remove-marker ${it}" }.join(' ') : null
             ].findAll { it != null }.join(' ')
         }
     }
@@ -284,29 +285,40 @@ process {
     withName: 'CELLMEASUREMENT' {
         // Need to bind gradle cache directory to somewhere writable for cellmeasurement tool to work
         containerOptions = {
+            def gradle_cache = params.containsKey('gradle_cache_dir') && params.gradle_cache_dir ?
+                params.gradle_cache_dir : "${System.getProperty('user.home')}/.gradle"
+
             if (workflow.containerEngine == 'apptainer' || workflow.containerEngine == 'singularity') {
-                return "-B ${params.gradle_cache_dir}:/cellmeasurement/.gradle"
+                return "-B ${gradle_cache}:/cellmeasurement/.gradle"
             } else if (workflow.containerEngine == 'docker') {
-                return "-v ${params.gradle_cache_dir}:/cellmeasurement/.gradle"
+                return "-v ${gradle_cache}:/cellmeasurement/.gradle"
             } else {
                 return ''
             }
         }
         ext.args = {
             [
-                params.pixel_size_microns ? "--pixel-size-microns=${params.pixel_size_microns}" : null,
-                params.skip_measurements ? '--skip-measurements=true' : '--skip-measurements=false',
-                params.cell_expansion ? "--cell-expansion=${params.cell_expansion}" : null
+                params.containsKey('pixel_size_microns') && params.pixel_size_microns ?
+                    "--pixel-size-microns=${params.pixel_size_microns}" : null,
+                params.containsKey('skip_measurements') ?
+                    (params.skip_measurements ? '--skip-measurements=true' : '--skip-measurements=false') : null,
+                params.containsKey('cell_expansion') && params.cell_expansion ?
+                    "--cell-expansion=${params.cell_expansion}" : null
             ].findAll { it != null }.join(' ')
         }
     }
+
     withName: 'SOPA_SEGMENTATIONCELLPOSE' {
         ext.args = {
             [
-                params.cellpose_flow_threshold != null ? "--flow-threshold ${params.cellpose_flow_threshold}" : null,
-                params.cellpose_cellprob_threshold != null ? "--cellprob-threshold ${params.cellpose_cellprob_threshold}" : null,
-                params.cellpose_model_type != null ? "--model-type ${params.cellpose_model_type}" : null,
-                params.cellpose_pretrained_model != null ? "--model-type ${params.cellpose_pretrained_model}" : null,
+                params.containsKey('cellpose_flow_threshold') && params.cellpose_flow_threshold != null ?
+                    "--flow-threshold ${params.cellpose_flow_threshold}" : null,
+                params.containsKey('cellpose_cellprob_threshold') && params.cellpose_cellprob_threshold != null ?
+                    "--cellprob-threshold ${params.cellpose_cellprob_threshold}" : null,
+                params.containsKey('cellpose_model_type') && params.cellpose_model_type != null ?
+                    "--model-type ${params.cellpose_model_type}" : null,
+                params.containsKey('cellpose_pretrained_model') && params.cellpose_pretrained_model != null ?
+                    "--pretrained-model ${params.cellpose_pretrained_model}" : null
             ].findAll { it != null }.join(' ')
         }
     }
@@ -314,20 +326,28 @@ process {
     withName: 'MESMERSEGMENT' {
         ext.args = {
             [
-                params.mesmer_combine_method ? "--combine-method ${params.mesmer_combine_method}" : '',
-                params.mesmer_segmentation_level ? "--segmentation-level ${params.mesmer_segmentation_level}" : '',
-                params.mesmer_maxima_threshold ? "--maxima-threshold ${params.mesmer_maxima_threshold}" : '',
-                params.mesmer_interior_threshold ? "--interior-threshold ${params.mesmer_interior_threshold}" : '',
-                params.mesmer_maxima_smooth ? "--maxima-smooth ${params.mesmer_maxima_smooth}" : '',
-                params.mesmer_min_nuclei_area ? "--min-nuclei-area ${params.mesmer_min_nuclei_area}" : '',
-                params.mesmer_remove_border_cells ? '--remove-cells-touching-border' : '--no-remove-cells-touching-border',
-                params.mesmer_pixel_expansion ? "--pixel-expansion ${params.mesmer_pixel_expansion}" : '',
-                params.mesmer_padding ? "--padding ${params.mesmer_padding}" : ''
+                params.containsKey('mesmer_combine_method') && params.mesmer_combine_method ?
+                    "--combine-method ${params.mesmer_combine_method}" : '',
+                params.containsKey('mesmer_segmentation_level') && params.mesmer_segmentation_level ?
+                    "--segmentation-level ${params.mesmer_segmentation_level}" : '',
+                params.containsKey('mesmer_maxima_threshold') && params.mesmer_maxima_threshold ?
+                    "--maxima-threshold ${params.mesmer_maxima_threshold}" : '',
+                params.containsKey('mesmer_interior_threshold') && params.mesmer_interior_threshold ?
+                    "--interior-threshold ${params.mesmer_interior_threshold}" : '',
+                params.containsKey('mesmer_maxima_smooth') && params.mesmer_maxima_smooth ?
+                    "--maxima-smooth ${params.mesmer_maxima_smooth}" : '',
+                params.containsKey('mesmer_min_nuclei_area') && params.mesmer_min_nuclei_area ?
+                    "--min-nuclei-area ${params.mesmer_min_nuclei_area}" : '',
+                params.containsKey('mesmer_remove_border_cells') ?
+                    (params.mesmer_remove_border_cells ? '--remove-cells-touching-border' : '--no-remove-cells-touching-border') : '',
+                params.containsKey('mesmer_pixel_expansion') && params.mesmer_pixel_expansion ?
+                    "--pixel-expansion ${params.mesmer_pixel_expansion}" : '',
+                params.containsKey('mesmer_padding') && params.mesmer_padding ?
+                    "--padding ${params.mesmer_padding}" : ''
             ].findAll { it != '' }.join(' ')
         }
     }
 }
-
 // Disable process selector warnings by default. Use debug profile to enable warnings.
 nextflow.enable.configProcessNamesValidation = false
 
