Ensure mesmer membrane channel is quoted

--- a/conf/test_mesmer.config
+++ b/conf/test_mesmer.config
@@ -23,6 +23,6 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     input                      = 'tests/mesmer_samplesheet.csv'
-
+    remove_markers             = 'TRITC'
     gradle_cache_dir           = '$HOME/.gradle'
 }
