Update cellmeasurement expansion param

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,7 +57,7 @@ params {
     // measurement options
     skip_measurements            = false
     pixel_size_microns           = 0.28
-    cell_expansion               = 3
+    estimate_cell_boundary_dist  = 3
 
     // Config options
     config_profile_name          = null
@@ -302,8 +302,8 @@ process {
                     "--pixel-size-microns=${params.pixel_size_microns}" : null,
                 params.containsKey('skip_measurements') ?
                     (params.skip_measurements ? '--skip-measurements=true' : '--skip-measurements=false') : null,
-                params.containsKey('cell_expansion') && params.cell_expansion ?
-                    "--cell-expansion=${params.cell_expansion}" : null
+                params.containsKey('estimate_cell_boundary_dist') && params.estimate_cell_boundary_dist ?
+                    "--estimate-cell-boundary-dist=${params.estimate_cell_boundary_dist}" : null
             ].findAll { it != null }.join(' ')
         }
     }
